working on windows

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <title>Skote - Vuejs Bootstrap 4 Admin Dashboard Template</title>
-  <meta content="Skote is a fully featured premium Vuejs admin dashboard template built on top of awesome Bootstrap 4.4.1" name="description" />
+  <title>VisiPoint - Visiting System</title>
+  <meta content="VisiPoint - Visiting System" name="description" />
 </head>
 
 <body>
